# platform.hardware.google.gfxstream

./: .clang-format  .gitignore  Android.bp  Android.mk  BUILD.bazel  BUILD.gn  CMakeLists.txt  GNUmakefile  MODULE.bazel  OWNERS  README.md  build-host.sh  cmake_transform.py  common.mk  json-dump.mk  meson.build  meson_options.txt  rebuild.sh
common/detector/: Android.bp  CMakeLists.txt  DetectGraphics.cpp  Egl.cpp  Egl.h  Expected.h  Gles.cpp  Gles.h  GlesFuncs.h  GraphicsDetector.cpp  GraphicsDetector.h  GraphicsDetector.proto  GraphicsDetectorGl.cpp  GraphicsDetectorGl.h  GraphicsDetectorVk.cpp  GraphicsDetectorVk.h  GraphicsDetectorVkExternalMemoryHost.cpp  GraphicsDetectorVkExternalMemoryHost.h  GraphicsDetectorVkPrecisionQualifiersOnYuvSamplers.cpp  GraphicsDetectorVkPrecisionQualifiersOnYuvSamplers.h  Image.cpp  Image.h  Lib.cpp  Lib.h  Subprocess.cpp  Subprocess.h  Vulkan.cpp  Vulkan.h
common/etc/: Android.bp  BUILD.bazel  CMakeLists.txt  meson.build
common/image/: Android.bp  CMakeLists.txt  ImageUtils.cpp
common/utils/: Android.bp  BUILD.bazel  CMakeLists.txt  Strings.cpp  meson.build
gl-host-common/: Android.bp  CMakeLists.txt  meson.build  opengles.cpp
gl-host-common/opengl/: EmuglBackendScanner.cpp  GLProcessPipe.cpp  NativeGpuInfo_windows.cpp  OpenglEsPipe.cpp  emugl_config.cpp  misc.cpp
guest/: Android.bp  BUILD.gn  meson.build  meson_options.txt
guest/GLESv1/: Android.bp  CMakeLists.txt  gl.cpp
guest/GLESv1_enc/: Android.bp  CMakeLists.txt  GLEncoder.cpp  GLEncoder.h  gl_client_context.h  gl_enc.cpp  gl_enc.h
guest/GLESv2/: Android.bp  CMakeLists.txt  gl2.cpp
guest/GLESv2_enc/: Android.bp  CMakeLists.txt  GL2Encoder.cpp  GL2Encoder.h  IOStream2.cpp  ProgramBinary.proto  gl2_client_context.cpp  gl2_enc.cpp  gl2_enc.h  gl2_entry.cpp  gl2_ftable.h
guest/GoldfishAddressSpace/: Android.bp  CMakeLists.txt
guest/OpenglCodecCommon/: Android.bp  Android.mk  CMakeLists.txt  ChecksumCalculator.cpp  GLClientState.cpp  GLClientState.h  GLESTextureUtils.cpp  GLSharedGroup.cpp  GLSharedGroup.h  TextureSharedData.h  glUtils.cpp  meson.build
guest/OpenglSystemCommon/: AddressSpaceStream.cpp  AddressSpaceStream.h  Android.bp  CMakeLists.txt  EmulatorFeatureInfo.h  Gralloc.h  GrallocGoldfish.cpp  GrallocGoldfish.h  GrallocMinigbm.cpp  GrallocMinigbm.h  HostConnection.cpp  HostConnection.h  ProcessPipe.cpp  ProcessPipe.h  QemuPipeStream.cpp  QemuPipeStream.h  QemuPipeStreamFuchsia.cpp  Sync.h  SyncAndroid.h  ThreadInfo.cpp  VirtioGpuPipeStream.cpp  VirtioGpuPipeStream.h  address_space_graphics_types.h  meson.build
guest/android/: ANativeWindowStub.cpp  Android.bp  Gralloc.cpp  GrallocGoldfish.cpp  GrallocStub.cpp
guest/android-emu/: Android.bp  Android.mk  CMakeLists.txt
guest/connection-manager/: Android.bp
guest/egl/: Android.bp  CMakeLists.txt  egl.cpp  eglContext.h  eglDisplay.cpp  eglDisplay.h  egl_ftable.h
guest/fuchsia/: fuchsia_stdio.cc  port.cc
guest/gralloc_cb/: Android.bp  CMakeLists.txt
guest/include/: Android.bp
guest/iostream/: Android.bp
guest/magma/: Android.bp  magma.cpp  magma_enc_util.cpp  magma_enc_util.h  meson.build
guest/mesa/: Android.bp  Android.gen.bp  meson.build
guest/mesa-gn/: mesa.gni
guest/platform/: Android.bp  Android.mk  CMakeLists.txt
guest/profiler/: Android.bp  CMakeLists.txt
guest/qemupipe/: Android.bp  CMakeLists.txt  qemu_pipe_host.cpp
guest/renderControl_enc/: Android.bp  CMakeLists.txt  EmulatorFeatureInfo.h  ExtendedRenderControl.cpp  ExtendedRenderControl.h  GfxStreamRenderControl.cpp  GfxStreamRenderControlConnection.cpp  GfxStreamRenderControlConnection.h  meson.build  renderControl_client_context.cpp  renderControl_enc.cpp  renderControl_enc.h  renderControl_types.h
guest/rendercontrol/: Android.bp  RenderControl.cpp
guest/vulkan/: Android.bp  Android.mk  CMakeLists.txt  gfxstream_vk_host.cpp  goldfish_vulkan.cpp  meson.build
guest/vulkan_enc/: Android.bp  Android.mk  AndroidHardwareBuffer.cpp  CMakeLists.txt  ResourceTracker.cpp  ResourceTracker.h  VkEncoder.cpp  VkEncoder.h  func_table.cpp  func_table.h  goldfish_vk_counting_guest.cpp  goldfish_vk_counting_guest.h  goldfish_vk_deepcopy_guest.cpp  goldfish_vk_deepcopy_guest.h  goldfish_vk_extension_structs_guest.cpp  goldfish_vk_extension_structs_guest.h  goldfish_vk_handlemap_guest.cpp  goldfish_vk_handlemap_guest.h  goldfish_vk_marshaling_guest.cpp  goldfish_vk_marshaling_guest.h  goldfish_vk_reserved_marshaling_guest.cpp  goldfish_vk_reserved_marshaling_guest.h  goldfish_vk_transform_guest.cpp  goldfish_vk_transform_guest.h  mesa_func_table.cpp  vk_format_info.h  vulkan_enc_unittests.cpp  vulkan_gfxstream.h  vulkan_gfxstream_structure_type.h
guest/vulkan_enc_unit_tests/: Android.bp  Android.mk
host/: Android.bp  BUILD.bazel  Buffer.cpp  Buffer.h  CMakeLists.txt  ColorBuffer.cpp  ColorBuffer.h  ContextHelper.h  ExternalObjectManager.cpp  ExternalObjectManager.h  FrameBuffer.cpp  FrameBuffer.h  GfxStreamAgents.cpp  GfxStreamAgents.h  GfxStreamBackendInitOverride.cpp  GlesCompat.h  GraphicsDriverLock.cpp  GraphicsDriverLock.h  NativeSubWindow.h  NativeSubWindow_android.cpp  NativeSubWindow_cocoa.mm  NativeSubWindow_qnx.cpp  NativeSubWindow_stub.cpp  NativeSubWindow_win32.cpp  NativeSubWindow_x11.cpp  PostWorker.cpp  PostWorkerGl.cpp  PostWorkerGl.h  ProcessResources.h  ReadBuffer.cpp  RenderChannelImpl.cpp  RenderChannelImpl.h  RenderControl.cpp  RenderLibImpl.cpp  RenderLibImpl.h  RenderThread.cpp  RenderThread.h  RenderThreadInfo.cpp  RenderThreadInfo.h  RenderWindow.cpp  (+33 more)
host/apigen-codec-common/: Android.bp  BUILD.bazel  CMakeLists.txt  X11Support.cpp  meson.build
host/backend/: Android.bp  BUILD.bazel  CMakeLists.txt  meson.build
host/compressedTextureFormats/: Android.bp  CMakeLists.txt  meson.build
host/features/: Android.bp  BUILD.bazel  CMakeLists.txt  Features.cpp  meson.build
host/gl/: Android.bp  BUILD.bazel  BufferGl.cpp  BufferGl.h  CMakeLists.txt  ColorBufferGl.cpp  ColorBufferGl.h  CompositorGl.h  DebugGl.cpp  DebugGl.h  DisplayGl.cpp  DisplayGl.h  DisplaySurfaceGl.cpp  (+22 more)
utils/: BUILD.bazel
(+1227 files in other folders)
